add some netword configuration Ref: #main
